{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 14,
  "lineage": "514dd740-01a8-f506-505d-816a847086b3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666224907186:vpc/vpc-07a36c154820569c6",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c864c4ff22360f55",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0f1f4e102d812c86d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a36c154820569c6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0326a41de37c72d40",
            "owner_id": "666224907186"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666224907186:loadbalancer/app/nginx-load-balancer/8426f2420b0cde95",
            "arn_suffix": "app/nginx-load-balancer/8426f2420b0cde95",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-load-balancer-1717941862.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666224907186:loadbalancer/app/nginx-load-balancer/8426f2420b0cde95",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-089302d5791e61621"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-044da566f786ff9d8"
              },
              {
                "subnet_id": "subnet-0d6798ff335801c6d"
              },
              {
                "subnet_id": "subnet-0ea06995e19b2eebb"
              }
            ],
            "subnets": [
              "subnet-044da566f786ff9d8",
              "subnet-0d6798ff335801c6d",
              "subnet-0ea06995e19b2eebb"
            ],
            "vpc_id": "vpc-07a36c154820569c6",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "module.sg_alb.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "testapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666224907186:listener/app/nginx-load-balancer/8426f2420b0cde95/0955e27c087e3d2d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:666224907186:targetgroup/nginx-tg/5018a0e3a79a8d35",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666224907186:listener/app/nginx-load-balancer/8426f2420b0cde95/0955e27c087e3d2d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:666224907186:loadbalancer/app/nginx-load-balancer/8426f2420b0cde95",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.alb.aws_alb.alb",
            "module.alb.aws_alb_target_group.app-tg",
            "module.sg_alb.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666224907186:targetgroup/nginx-tg/5018a0e3a79a8d35",
            "arn_suffix": "targetgroup/nginx-tg/5018a0e3a79a8d35",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666224907186:targetgroup/nginx-tg/5018a0e3a79a8d35",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07a36c154820569c6"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666224907186:security-group/sg-089302d5791e61621",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089302d5791e61621",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-1",
            "name_prefix": "",
            "owner_id": "666224907186",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a36c154820569c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.sg_ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666224907186:security-group/sg-02646bff58ce7362b",
            "description": "controls access to the ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02646bff58ce7362b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089302d5791e61621"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-sg-1",
            "name_prefix": "",
            "owner_id": "666224907186",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a36c154820569c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.sg_alb.aws_security_group.sg"
          ]
        }
      ]
    }
  ]
}